Changed some info in html

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <img src="hill4.png" id="hill4">
         <img src="hill5.png" id="hill5">
         <img src="tree.png" id="tree">
-        <h2 id="text">Hi, I am Yash.</h2>
+        <h2 id="text">Hi, I am Yash.<br>Scroll to know more</h2>
         <img src="plant.png" id="plant">
         <img src="leaf.png" id="leaf">
     </section>
     <section class="sec">
         <h2>Brief Description of My Website</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae accusantium, dolorem id recusandae unde totam quos autem, sapiente quae sunt vitae nam ipsam non? Fugiat incidunt recusandae officia ratione, totam repudiandae omnis. Quisquam,
-            cumque explicabo fugit harum illum beatae magni dolorem perspiciatis? Quasi ex autem inventore ipsum atque labore cum.</p><br><br>
+        <p>Welcome to my portfolio. I am a passionate ethical hacker specializing in reverse engineering, OSINT (Open Source Intelligence), and cybersecurity. With a deep understanding of system vulnerabilities and a focus on penetration testing, I am committed
+            to securing digital infrastructures by uncovering weaknesses before they can be exploited.</p><br><br>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae accusantium, dolorem id recusandae unde totam quos autem, sapiente quae sunt vitae nam ipsam non? Fugiat incidunt recusandae officia ratione, totam repudiandae omnis. Quisquam,
             cumque explicabo fugit harum illum beatae magni dolorem perspiciatis? Quasi ex autem inventore ipsum atque labore cum.</p><br><br>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae accusantium, dolorem id recusandae unde totam quos autem, sapiente quae sunt vitae nam ipsam non? Fugiat incidunt recusandae officia ratione, totam repudiandae omnis. Quisquam,
