Changed some info in html and css files

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <img src="leaf.png" id="leaf">
     </section>
     <section class="sec">
-        <h2>Brief Description of My Website</h2>
-        <p>Welcome to my portfolio. I am a passionate ethical hacker specializing in reverse engineering, OSINT (Open Source Intelligence), and cybersecurity. With a deep understanding of system vulnerabilities and a focus on penetration testing, I am committed
-            to securing digital infrastructures by uncovering weaknesses before they can be exploited.</p><br><br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae accusantium, dolorem id recusandae unde totam quos autem, sapiente quae sunt vitae nam ipsam non? Fugiat incidunt recusandae officia ratione, totam repudiandae omnis. Quisquam,
-            cumque explicabo fugit harum illum beatae magni dolorem perspiciatis? Quasi ex autem inventore ipsum atque labore cum.</p><br><br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae accusantium, dolorem id recusandae unde totam quos autem, sapiente quae sunt vitae nam ipsam non? Fugiat incidunt recusandae officia ratione, totam repudiandae omnis. Quisquam,
-            cumque explicabo fugit harum illum beatae magni dolorem perspiciatis? Quasi ex autem inventore ipsum atque labore cum.</p><br><br>
+        <p><b>Hi Mom!!</b>(Just Kidding Y in the world will you see this page)Welcome to my portfolio. I am a passionate ethical hacker specializing in reverse engineering, OSINT (Open Source Intelligence), and Coding. With a deep understanding of system
+            vulnerabilities and a focus on penetration testing, I am committed to securing digital infrastructures by uncovering weaknesses before they can be exploited.
+        </p>
+        <br><br>
+        <p><b>I want you to take this website as a rookie's attempt to learn still uncovered technology.
+        </b></p>
+
     </section>
     <script src="script.js"></script>
 </body>
